--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
           <p>Please feel free to contact me</p>
           <h4>Your Information</h4>
           <form
-            action="https://formsubmit.co/me.dyllan3164@gmail.com"
+            action="https://formsubmit.co/dyllan3164@gmail.com"
             method="post"
           >
             <div class="form-container">
