--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
           <h4>Your Information</h4>
           <form
             action="https://formsubmit.co/dyllan3164@gmail.com"
-            method="post"
+            method="POST"
           >
             <div class="form-container">
               <!-- Kolom Input Name  -->
