--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,7 @@
             action="https://formsubmit.co/dyllan3164@gmail.com"
             method="POST"
           >
+          
             <div class="form-container">
               <!-- Kolom Input Name  -->
               <div class="input-container">
@@ -126,6 +127,8 @@
             </div>
             <input type="submit" value="Submit" class="submit" />
             <input type="hidden" name="_next" class="next" />
+            <input type="hidden" value="false" name="_captcha">
+          
           </form>
         </div>
       </div>
