--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
     />
   </head>
   <body>
+    <div class="splash">
+      <h1 class="splash-text" data-aos="fade- right" data-aos-duration="200">
+        Hello guys! <br />Welcome to the club
+      </h1>
+      <img src="assets/astronaut1.png" alt="" class="astronaut-dabbing" />
+      <img src="assets/astronaut2.png" alt="" class="astronaut-takeoff" />
+    </div>
+
     <header>
       <div class="header">
         <img
@@ -318,7 +326,6 @@
         </div>
       </div>
     </main>
-
 
     <footer>
       <div class="main-footer">
